src/main/resources/Krakatau-master/tests/assembler/bad/badescapes5.j
.class public '\U00110000'
.super java/lang/Object
.end class